fix(safari): fixes the safari flex items collapsing bug
it was due to aving height on the center container,
removing that fixed all flex item problems

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -189,6 +189,8 @@ header {
     display: flex;
     min-height: 0px;
     justify-content: center;
+    justify-content: space-around;
+    width: 100vw;
 }
 
 .side-nav-container {
@@ -446,7 +448,7 @@ header {
     flex-direction: column;
     align-items: center;
 
-    height: Calc(100vh - 50px);
+    /* height: Calc(100vh - 50px); */
     overflow: scroll;
 }
 
@@ -484,7 +486,7 @@ header {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-bottom: 65px;
+    margin-bottom: 15px;
 }
 
 .language-choices, .tweet-type-choices {
@@ -792,6 +794,7 @@ header {
     background-color: var(--grey-floating-panel-hover);
     fill: var(--blue);
     width: 250px;
+    /* flex: 160px; */
     margin-top: 20px;
     margin-bottom: 20px;
     align-self: flex-start;
@@ -844,6 +847,7 @@ header {
 
 .collection-item {
     min-width: 150px;
+    height: 40px;
     display: flex;
     align-items: center;
     cursor: pointer;
